objects/CPOC_Room__c.object
<CustomObject>
    <fields>
        <fullName>CPOC_End_Date__c</fullName>
        <description>Visit End date of this particular room</description>
        <label>Room End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CPOC_Start_Date__c</fullName>
        <description>Visit Start date of this particular room</description>
        <label>Room Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_Engagements_Events__c</fullName>
        <description>CPOC Request related to CPOC Room</description>
        <label>Customer Engagements &amp; Events</label>
        <referenceTo>CEE__c</referenceTo>
        <relationshipLabel>CPOC Rooms</relationshipLabel>
        <relationshipName>CPOC_Rooms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Room__c</fullName>
        <description>Rooms available for CPOC Lab Request</description>
        <label>Room</label>
        <referenceTo>CEE_Room__c</referenceTo>
        <relationshipLabel>CPOC Rooms</relationshipLabel>
        <relationshipName>CPOC_Rooms</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <description>This is a junction object between Customer Engagement and Events and CEE Rooms Object.</description>
    <label>CPOC Room</label>
    <nameField>
        <displayFormat>RM-{00000}</displayFormat>
        <label>Room Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CPOC Rooms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <validationRules>
        <fullName>Visit_End_Date_Greaterthan</fullName>
        <active>false</active>
        <errorConditionFormula>CPOC_End_Date__c  &gt; Customer_Engagements_Events__r.CPOC_End_Date__c</errorConditionFormula>
        <errorDisplayField>CPOC_End_Date__c</errorDisplayField>
        <errorMessage>Visit End Date should not be greater  than CPOC's End Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Visit_End_date_should_be_more</fullName>
        <active>true</active>
        <description>It is for CPOC</description>
        <errorConditionFormula>CPOC_End_Date__c &lt; CPOC_Start_Date__c</errorConditionFormula>
        <errorDisplayField>CPOC_Start_Date__c</errorDisplayField>
        <errorMessage>CPOC Start date should be less than CPOC End date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Visit_Start_Date_not_lessthan</fullName>
        <active>false</active>
        <errorConditionFormula>CPOC_Start_Date__c   &lt; Customer_Engagements_Events__r.CPOC_Start_Date__c</errorConditionFormula>
        <errorDisplayField>CPOC_Start_Date__c</errorDisplayField>
        <errorMessage>Visit Start Date should not be less than CPOC's Start Date</errorMessage>
    </validationRules>
</CustomObject>